# OOP_7_lab

./: README.md
.devcontainer/: devcontainer.json
7_lab/: CMakeLists.txt  main.cpp
7_lab/include/: arena.h  combat_visitor.h  console_observer.h  factory.h  file_observer.h  knight.h  npc.h  observer.h  pegasus.h  squirrel.h  visitor.h
7_lab/src/: arena.cpp  combat_visitor.cpp  factory.cpp  knight.cpp  npc.cpp  pegasus.cpp  squirrel.cpp
7_lab/tests/: gtests.cpp  test_data_npcs.txt
